--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@angular/common": "^2.1.2",
     "@angular/compiler": "^2.1.2",
     "@angular/core": "^2.1.2",
-    "@angular/forms": "^2.0.0",
+    "@angular/forms": "^2.1.2",
     "@angular/http": "^2.0.0",
     "@angular/material": "2.0.0-alpha.9-3",
     "@angular/platform-browser": "^2.1.2",
     "@angular/platform-browser-dynamic": "^2.0.0",
     "@angular/router": "^3.0.0",
     "core-js": "^2.4.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.26"
