--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^4.1.3",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "intl": "^1.2.5",
     "rxjs": "5.4.0",
     "ts-helpers": "^1.1.2",
