--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+    "async": "^2.4.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "material-design-icons": "^3.0.1",
     "intl": "^1.2.5",
+    "linq-es5": "^1.11.9",
+    "material-design-icons": "^3.0.1",
+    "primeng": "^4.0.3",
     "rxjs": "5.4.0",
     "ts-helpers": "^1.1.2",
     "web-animations-js": "^2.2.5",
